<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/sign_up"
        android:textColor="#0B48C1"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        android:textColor="#1441C8"
        android:textStyle="bold"
        android:background="@drawable/background"
        android:layout_marginStart="10dp"
        />
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_name"
        android:layout_marginTop="20dp"
        android:backgroundTint="#1441C8"
       android:layout_marginStart="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number"
        android:textSize="20sp"
        android:textColor="#1441C8"
        android:textStyle="bold"
        android:background="@drawable/background"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_number"
        android:layout_marginTop="25dp"
        android:backgroundTint="#1441C8"
       android:layout_marginStart="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:textColor="#1441C8"
        android:textStyle="bold"
        android:background="@drawable/background"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_email"
        android:layout_marginTop="25dp"
        android:backgroundTint="#1441C8"
       android:layout_marginStart="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        android:textColor="#1441C8"
        android:textStyle="bold"
        android:background="@drawable/background"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_password"
        android:layout_marginTop="25dp"
        android:backgroundTint="#1441C8"
       android:layout_marginStart="10dp"
        />
    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ssss"
        android:textSize="17sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/shape"
        app:backgroundTint="@null"
        />

</LinearLayout>