<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facebook_login"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#0629ED"
        />
    <EditText
        android:id="@+id/loginemail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/mobile_email_or_phone_number"
        android:background="@drawable/ic_launcher_background"
        android:layout_margin="20dp"
        android:backgroundTint="#2C03D0F4"
        android:layout_marginStart="10dp"
        />
    <EditText
        android:id="@+id/loginpassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/passawrd"
        android:layout_margin="15dp"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="#2C03D0F4"
        android:layout_marginStart="10dp"
        />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/login" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fogotten_passaward"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#03A9F4"
        android:layout_marginTop="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        >
        <View
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:background="#AAAAAA"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_marginHorizontal="10dp"
            android:textSize="15sp"
            android:textColor="#AAAAAA"
            />
        <View
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:background="#AAAAAA"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="20dp"
        android:layout_gravity="center"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Create a New Account"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            />

    </LinearLayout>

</LinearLayout>